# Rewind-Launcher-V4

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: discord_rpc.rs  main.rs
src/components/: Frame.tsx  ImportVersionModal.tsx  Layout.tsx  LoginContainer.tsx  MusicPlayer.tsx  ProfileTooltip.tsx  Settings.tsx  Sidebar.tsx
src/contexts/: ThemeContext.tsx
src/pages/: Home.tsx  LaunchVersion.tsx  Leaderboard.tsx  Library.tsx  Servers.tsx  Shop.tsx
src/styles/: App.css  Frame.css  index.css
src/utils/: discordRPC.ts  security.ts
